--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,24 @@
-Adafruit-BBIO==1.0.3
-altair==2.2.2
-Brlapi==0.6.5
-cached-property==1.4.3
-certifi==2018.4.16
-cffi==1.11.5
-chardet==2.3.0
-coverage==4.5.1
-cryptography==1.7.1
-cupshelpers==1.0
-decorator==4.0.11
+backports.csv==1.0.7
+defusedxml==0.6.0
 diff-match-patch==20181111
-Django==2.1.3
-django-import-export==1.1.0
-docker==3.4.1
-docker-compose==1.22.0
-docker-pycreds==0.3.0
-dockerpty==0.4.1
-docopt==0.6.2
-entrypoints==0.2.3
+Django==2.2.3
+django-appconf==1.0.3
+django-crispy-forms==1.7.2
+django-cruds-adminlte==0.0.16
+django-image-cropping==1.2.0
+django-import-export==1.2.0
+django-select2==7.1.0
+djangoajax==3.1
+easy-thumbnails==2.6
 et-xmlfile==1.0.1
-httplib2==0.9.2
-idna==2.2
-ipykernel==4.5.2
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-jdcal==1.4
-Jinja2==2.8
-jsonschema==2.6.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.1
-keyring==10.1
-keyrings.alt==1.3
-louis==3.0.0
-lxml==4.1.0
-Mako==1.0.6
-MarkupSafe==0.23
-mistune==0.7.3
-nbconvert==4.2.0
-nbformat==4.2.0
-netifaces==0.10.5
-nltk==3.3
-notebook==4.2.3
-numpy==1.15.4
-odfpy==1.3.6
-openpyxl==2.5.11
-pandas==0.23.4
-pbr==4.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==4.0.0
-pipenv==2018.5.18
-prompt-toolkit==1.0.9
-ptyprocess==0.5.1
-py==1.5.2
-pyasn1==0.1.9
-pycairo==1.17.0
-pycparser==2.18
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0
-Pygments==2.2.0
-PyGObject==3.28.2
-pyserial==3.4
-pysmbc==1.0.15.6
-pytest==3.1.2
-pytest-cov==2.5.1
-python-apt==1.4.0b3
-python-dateutil==2.7.5
-python-debian==0.1.30
-python-debianbts==2.6.1
-python-xlib==0.14
-pytz==2017.2
-pywebview==1.8
-pyxdg==0.25
-PyYAML==3.13
-pyzmq==16.0.2
-reportbug==7.1.7
-reportlab==3.3.0
-requests==2.12.4
-SecretStorage==2.3.1
-setproctitle==1.1.10
-simplegeneric==0.8.1
-six==1.10.0
-smbus-cffi==0.5.1
-SQLAlchemy==1.1.14
-stevedore==1.28.0
-tablib==0.12.1
-terminado==0.6
-textblob==0.15.1
-texttable==0.9.1
-toolz==0.9.0
-tornado==4.4.3
-traitlets==4.3.1
-typing==3.6.6
-tzlocal==1.4
-unattended-upgrades==0.1
-unicodecsv==0.14.1
-urllib3==1.19.1
-vega==1.4.0
-virtualenv==16.0.0
-virtualenv-clone==0.3.0
-virtualenvwrapper==4.8.2
-wcwidth==0.1.7
-websocket-client==0.48.0
-xlrd==1.1.0
+jdcal==1.4.1
+odfpy==1.4.0
+openpyxl==2.6.2
+Pillow==6.1.0
+pytz==2019.1
+PyYAML==5.1.1
+six==1.12.0
+sqlparse==0.3.0
+tablib==0.13.0
+xlrd==1.2.0
 xlwt==1.3.0
-xvfbwrapper==0.2.9
-youtube-dl==2017.5.18.1
