--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 backports.csv==1.0.7
 defusedxml==0.6.0
 diff-match-patch==20181111
-Django==2.2.3
+Django==2.2.4
 django-appconf==1.0.3
 django-crispy-forms==1.7.2
 django-cruds-adminlte==0.0.16
@@ -15,6 +15,7 @@ jdcal==1.4.1
 odfpy==1.4.0
 openpyxl==2.6.2
 Pillow==6.1.0
+psycopg2==2.8.3
 pytz==2019.1
 PyYAML==5.1.1
 six==1.12.0
