--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,39 @@
+asgiref==3.2.10
 backports.csv==1.0.7
+cairocffi==1.1.0
+CairoSVG==2.4.2
+cffi==1.14.3
+cssselect2==0.3.0
 defusedxml==0.6.0
-diff-match-patch==20181111
-Django==2.2.4
-django-appconf==1.0.3
-django-crispy-forms==1.7.2
+diff-match-patch==20200713
+Django==3.1.1
+django-appconf==1.0.4
+django-crispy-forms==1.9.2
+django-cruds==1.2.0
 django-cruds-adminlte==0.0.16
-django-image-cropping==1.2.0
-django-import-export==1.2.0
-django-select2==7.1.0
-djangoajax==3.1
-easy-thumbnails==2.6
+django-image-cropping==1.5.0
+django-import-export==2.3.0
+django-select2==7.4.2
+django-six==1.0.4
+djangoajax==3.2
 et-xmlfile==1.0.1
+html5lib==1.1
 jdcal==1.4.1
-odfpy==1.4.0
-openpyxl==2.6.2
-Pillow==6.1.0
-psycopg2==2.8.3
-pytz==2019.1
-PyYAML==5.1.1
-six==1.12.0
-sqlparse==0.3.0
-tablib==0.13.0
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.5
+Pillow==7.2.0
+pkg-resources==0.0.0
+psycopg2==2.8.6
+pycparser==2.20
+Pyphen==0.9.5
+pytz==2020.1
+PyYAML==5.3.1
+six==1.15.0
+sqlparse==0.3.1
+tablib==2.0.0
+tinycss2==1.0.2
+WeasyPrint==51
+webencodings==0.5.1
 xlrd==1.2.0
 xlwt==1.3.0
